k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infra
  labels:
    name: infra
    app: inframind
    environment: production
